--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" >Funda</a>
+    <a class="navbar-brand">Funda</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
             aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,20 +8,19 @@
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" >Home</a>
+          <a class="nav-link active" aria-current="page">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" >Chat</a>
+          <a class="nav-link">Chat</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
-             aria-expanded="false">
-            User
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-            <li><a class="dropdown-item" >login</a></li>
-            <li><a class="dropdown-item" >logOut</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="isLoggedIn | async" >user</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="isLoggedout | async" routerLink="../login">login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="logOut()" *ngIf="isLoggedIn | async" routerLink="../login">logOut</a>
         </li>
       </ul>
       <form class="d-flex">
